--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,21 +2,23 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 repositories {
     google()
 }
 
 android {
-    compileSdkVersion 29
+    compileSdk 32
+
     defaultConfig {
         applicationId "com.example.minimoneybox"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdk 21
+        targetSdk 32
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,14 +26,54 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
-    implementation 'com.google.android.material:material:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.airbnb.android:lottie:3.0.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    /** Coroutines **/
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    /** Dagger 2 **/
+    implementation "com.google.dagger:dagger:2.40.5"
+    kapt "com.google.dagger:dagger-compiler:2.40.5"
+    kaptTest "com.google.dagger:dagger-compiler:2.40.5"
+    kaptAndroidTest "com.google.dagger:dagger-compiler:2.40.5"
+
+    /** lottie **/
+    implementation 'com.airbnb.android:lottie:3.6.1'
+
+    /** Mock web server **/
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.1")
+
+    /** Navigation component **/
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
+
+    /** OkHttp **/
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    /** Retrofit **/
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    /** ViewModel **/
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 }
