--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,20 +47,23 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    /** Coroutines **/
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
-
     /** Dagger 2 **/
-    implementation "com.google.dagger:dagger:2.40.5"
-    kapt "com.google.dagger:dagger-compiler:2.40.5"
-    kaptTest "com.google.dagger:dagger-compiler:2.40.5"
-    kaptAndroidTest "com.google.dagger:dagger-compiler:2.40.5"
+    def dagger_version = "2.40.5"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kaptTest "com.google.dagger:dagger-compiler:$dagger_version"
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
 
     /** lottie **/
     implementation 'com.airbnb.android:lottie:3.6.1'
 
+    /** MockK **/
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation "io.mockk:mockk-agent-jvm:1.12.0"
+    androidTestImplementation "io.mockk:mockk-android:1.12.0"
+
     /** Mock web server **/
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.1")
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
 
     /** Navigation component **/
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
@@ -73,6 +76,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    /** RxAndroid 3 **/
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    /** RxBinding **/
+    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
+
+    /** RxJava 3 **/
+    implementation "io.reactivex.rxjava3:rxjava:3.0.13"
 
     /** ViewModel **/
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
